<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".second.MainActivity">

    <ImageView
        android:id="@+id/btn_back_second"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/iv_back_btn_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_2x" />

    <TextView
        android:id="@+id/txt_secondscreen_appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font3_poppinsbold"
        android:text="@string/tv_second_screen"
        android:layout_marginTop="28sp"
        android:layout_marginStart="68dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/btn_back_second"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/font1_poppins_regular"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_secondscreen_appbar" />

    <TextView
        android:id="@+id/tv_username_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font3_poppinsbold"
        android:text="@string/tv_Username_second"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_second" />

    <TextView
        android:id="@+id/tv_selectuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_select_username"
        android:fontFamily="@font/font3_poppinsbold"
        android:textSize="23sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username_second" />

    <Button
        android:id="@+id/Choose_btn"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="@string/btn_choose_user"
        android:contentDescription="@string/btn_choose_user_desc"
        android:textAllCaps="false"
        android:fontFamily="@font/font1_poppins_regular"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bg_rounded_first_2"
        android:textSize="15sp"
        android:layout_marginBottom="-100dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/darkgreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_selectuser"
        app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>